--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
       # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
@@ -122,7 +122,7 @@ author:
 footer:
   links:
     - label: "Linkedin"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin-in"
       url: https://www.linkedin.com/in/tanja-radovic-jolic-46917431/
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
