--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "Data Mosaic"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Tanja Radović"
-description              : "An amazing website."
-url                      : "https://tradovic.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "Data Mosaic."
+url                      : "https://tradovic.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/blog" # the subpath of your site, e.g. "/blog"
 repository               : "tradovic/blog" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Tanja Radović"
   avatar           : "/assets/images/tanja-radovic.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am ful stack developer"
+  bio              : "Full stack developer"
   location         : "Kragujevac, Serbia"
   email            :
   links:
@@ -107,7 +107,7 @@ author:
       # url: "https://your-website.com"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
-      # url: "https://twitter.com/"
+      url: "https://www.linkedin.com/in/tanja-radovic-jolic-46917431/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -273,7 +273,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: splash #single
       author_profile: true
       read_time: true
       comments: # true
