--- a/_config.yml
+++ b/_config.yml
@@ -273,7 +273,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash #single
+      layout: single
       author_profile: true
       read_time: true
       comments: # true
