--- a/_config.yml
+++ b/_config.yml
@@ -243,7 +243,7 @@ category_archive:
   type: liquid
   path: /categories/
 tag_archive:
-  type: jekyll-archives #liquid
+  type: liquid
   path: /tags/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
