--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -20,8 +20,8 @@ sr: &DEFAULT_SR
   share_on_label             : "Share on"
   meta_label                 :
   tags_label                 : " "
-  categories_label           : "Categories:"
-  date_label                 : "Updated:"
+  categories_label           : " "
+  date_label                 : " "
   comments_label             : "Leave a comment"
   comments_title             : "Comments"
   more_label                 : "Learn more"
