--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Tanja Radović"
   avatar           : "/assets/images/tanja-radovic.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Full stack developer"
+  bio              : "I am a web developer focusing on back-end development. Always hungry to keep learning."
   location         : "Kragujevac, Serbia"
   email            :
   links:
