--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : ""
+  name             : " Hello, "
   avatar           : "/assets/images/tanja-radovic.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am a web developer focusing on back-end development. Always hungry to keep learning."
   location         : "Kragujevac, Serbia"
